deployment/bankpack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankpack
  labels:
    app: bankpack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bankpack
  template:
    metadata:
      labels:
        app: bankpack
    spec:
      containers:
      - name: bankpack
        image: drache0311/bankpack:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 80
