deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bankpack-front-svc
  labels:
    app: bankpack-front-svc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: bankpack-front-svc
