deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankpack
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - secretName: tls-secret
  rules:
  - host: bankpack.169.56.174.130.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bankpack
            port:
              number: 80
